# EDIPIC-2D

./: CMakeLists.txt
Instructions/: installing_edipic2d.md
